--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+*{
+	transition: all .2s ease-in-out;
+	scroll-behavior: smooth;
+}
+
+.font-outline-2 {
+	-webkit-text-stroke: 2px black;
+}
+.font-outline-4 {
+	-webkit-text-stroke: 4px black;
+}
